<resources>
    <string name="app_name">term_project</string>
    <string name="dept_name">Information\nCommunication\nEngineering</string>
    <string name="homepage">홈페이지 바로가기</string>
    <string name="dept">학과소개</string>
    <string name="dept_info">정보통신공학과는 21세기 정보화 사회를 구현하는데 중추적 역할을 담당할 수 있는 현장 적응력과 창의적 사고를 갖춘 우수한 전문 엔지니어 양성을 목적으로 설립되어, 국제화된 전문 인력을 양성하며 실무능력과 창의적 문제 해결 능력을 갖춘 성실한 인재, 인성과 윤리적이며 타인과 의사소통을 원만히 수행할 수 있는 인화적인 인재, 국제적인 감각과 지역의 한 일 원로서 지역을 위하여 봉사할 수 있는 지역 형 리더로 양성하기 위하여 노력하고 있다. 이에 정보통신공학과에서는 산업현장에서 필요로 하는 실력을 갖춘 정보통신공학과 기술 인력을 배출할 수 있는 전공 심화과정과 다중전공(사물인터넷, 설계중심RF융합, 인공지능, 무인비행체, 게임소프트웨어)을 운영하고 있다.</string>
    <string name="diagram">이수 체계도</string>
    <string name="subject">교과목 안내</string>
    <string name="location">위치안내</string>
    <string name="call">전화걸기</string>
    <string name="goal">교육목표</string>
    <string name="goal_info">
        1. 정보통신분야의 관련지식 및 도구 사용법을 산업체에 적용할 수 있는 실무능력 배양\n
        2. 정보통신분야 시스템의 분석 및 설계 능력을 겸비한 전문능력 배양\n
        3. 전공기초의 내실화를 토대로 다양한 문제를 해결할 수 있는 창의능력 배양\n
        4. 사회발전을 위한 국제적 협동능력 및 직업적, 도덕적, 사회적 책임감의 배양</string>
    <string name="industry">응용 및 관련 산업분야</string>
    <string name="industry_info">
        정보통신공학과는 모바일콘텐츠산업, 디지털미디어 및 SoC산업, New IT산업과 같은 넓은 산업구조를 가지고 있으며, 저학년에서는 공통 기초모듈을 이수한 후 고학년에서는 무선통신분야, 소프트웨어·디지털콘텐츠분야, 디지털정보 및 신호처리분야, 아날로그.RF분야를 배우고 있다.\n\n
- 무선통신 분야 : 통신방식론, 통신이론, 이동통신공학 과정\n
- 소프트웨어 · 디지털콘텐츠 분야 : 통신프로토콜, DBMS 및 응용, Embedded 시스템설계 과정, 3D그래픽스실습, 컴퓨터애니메이션실습, 콘텐츠설계 과정\n
- 디지털정보 및 신호처리 분야 : 미디어신호처리실습, 미디어신호처리응용, 디지털미디어설계 과정, 모뎀/코덱설계, 디지털시스템설계, SoC/반도체설계 과정\n
- 아날로그 · RF 분야 : IC설계, 안테나설계, 초고주파공학 과정</string>
    <string name="carreer">졸업 후 진로</string>
    <string name="carreer_info">
        졸업학년에서는 종합설계 캡스톤 디자인을 통해 모바일콘텐츠산업, 디지털미디어 및 SoC산업, New IT산업에서 이론을 실현시킬 수 있는 능력을 배양하고자하는 교육방향이 교육과정에 반영되어 있다.\n\n
졸업 후 진로는 이미 졸업생들이 대기업, 방송국, 공사, 대학원, 연구소, 관공서 전문기술직, 정보보안 관련 기업, 인터넷 전문 포털기업, 게임개발 및 유통 기업, 모바일 콘텐츠 개발 전문 기업, 이동통신·위성통신 전문기업 , 통신관련 소프트 및 하드웨어 전문기업에 다양하게 진출하여 사회의 한 일원으로서 역할을 충실히 수행하고 있다.
    </string>
    <string name="subject_prompt">과목을 선택하세요.</string>
    <string-array name="subjects_array">
        <item >C프로그래밍</item>
        <item>이산수학</item>
        <item>공학설계입문</item>
        <item>공학수학</item>
        <item>디지털회로및실험</item>
        <item>UNIX시스템</item>
        <item>고급C프로그래밍</item>
        <item>신호및시스템</item>
        <item>선형대수학</item>
        <item>기초정보통신실험</item>
        <item>회로이론</item>
        <item>디지털신호처리</item>
        <item>전자기학</item>
        <item>컴퓨터구조</item>
        <item>객체지향프로그래밍</item>
        <item>반도체공학</item>
        <item>확률및통계</item>
        <item>자료구조</item>
        <item>정보이론</item>
        <item>컴퓨터그래픽스</item>
        <item>마이크로프로세서</item>
        <item>데이터베이스</item>
        <item>채널코딩</item>
        <item>JAVA프로그래밍</item>
        <item>Three_Dimensional그래픽스프로그래밍</item>
        <item>영상처리</item>
        <item>데이터통신</item>
        <item>전자회로1</item>
        <item>전자회로2</item>
        <item>무선응용공학</item>
        <item>통신방식론</item>
        <item>PCB아트워크설계</item>
        <item>운영체제</item>
        <item>디지털통신실험</item>
        <item>디지털통신이론</item>
        <item>안테나공학</item>
        <item>컴퓨터비전프로그래밍</item>
        <item>알고리즘</item>
        <item>컴퓨터네트워크</item>
        <item>디지털시스템설계</item>
        <item>컴퓨터애니메이션</item>
        <item>모바일프로그래밍</item>
        <item>이동통신프로토콜</item>
        <item>시스템프로그래밍</item>
        <item>고주파회로측정및설계</item>
        <item>SoC설계</item>
        <item>통신시스템설계</item>
        <item>멀티미디어신호처리</item>
        <item>웹프로그래밍</item>
        <item>모바일컨텐츠</item>
        <item>이동통신공학</item>
        <item>반도체소자설계</item>
        <item>지식재산권</item>
        <item>공학영어</item>
        <item>공학경영</item>
        <item>캡스톤디자인</item>
        <item>네트워크프로그래밍</item>
    </string-array>
    <string name="C프로그래밍_info">기본적으로 쓰이는 C언어의 개념과 특성에 대하여 이해하고 기본적인 연산자 및 제어문 함수, 포인터, 구조체에 대하여 학습 한다.</string>
    <string name="이산수학_info">컴퓨터과학 및 공학에 필요한 기초이론과 수학을 그 내용으로 하며, 집합, 수열, 논리, 순열, 조합, 비둘기집 원리, 관계와 방향 그래프, 함수, 그래프 이론, 순서관계와 구조, 트리, 반그룹과 그룹, 언어와 유한 상태 기계 그룹과 코딩 등을 학습한다.</string>
    <string name="공학설계입문_info">공학설계의 개념과 이에 필요한 기법을 배우며, 집단 의사결정법에 관한 내용을 배우고 이를 통하여 팀원이 개발할 창의적인 목표설정과 개발일정을 세운다. 실제 개발에 필요한 설계 및 문제해결 및 작품 활동에 대한 결과보고 및 평가가 이루어지며 조별 사례를 발표 한다.</string>
    <string name="공학수학_info">미분적분학, 벡터, 벡터 미분방정식, 행렬, 선형 미분방정식, 라플라스 변환, 퓨리에 급수 및 변환, 파동방정식 등에 관하여 배우고, 공학에서의 구체적인 응용 예를 통하여 학습한다. 확률, 랜덤 변수 그리고 랜덤 프로세스를 배우고, 스펙트럼 특성을 중심으로 구체적인 응용 예를 통하여 학습한다.</string>
    <string name="디지털회로및실험_info">논리회로 및 시스템의 해석과 설계를 하기 위해 기초가 되는 수 표현법, 부울대수, 조합논리회로와 순차논리회로, 비동기식 순차회로, 컴퓨터 연산부의 논리설계, 시스템 제어부의 설계를 실험을 통해 익힌다.</string>
    <string name="UNIX시스템_info">개인용 컴퓨터에서 대형 컴퓨터까지 다양한 컴퓨터에서 운영되는 운영체제인 유닉스(리눅스)의 기본적인 명령의 사용 방법을 익히고, 프로그래머를 위한 도구 사용법을 익힘으로써 유닉스(리눅스)에서 프로그램 할 수 있는 능력을 배양한다.</string>
    <string name="고급C프로그래밍_info">함수, 배열, 포인터, 메모리의 동적할당, 구조체, 고급데이터 표현 등의 고급 C 언어에 해당하는 내용을 익히고, 해결하려는 문제를 구조적으로 분석하여 프로그램화 하는 기술을 익힌다. 단원별로 수시평가와 과제물을 각 5회 이상 실시하여 실제적인 문제를 해결하는 능력을 기른다. 오픈된 자료로 주어진 문제를 해결하도록하여 실제 산업체에서와 동일하게 오픈된 자료와 기 작성된 프로그램을 활용하여 실무에 활용하는 능력을 배양한다.</string>
    <string name="신호및시스템_info">연속신호와 이산신호, 특성신호, 시스템의 기본적인 성질, 미분방정식과 차분방정식에 의한 시스템의 수학적인 표현방법, 푸리에 급수와 푸리에 변환에 의한 주파수 영역에서의 해석방법을 터득하며, 라플라스변환을 이용한 시간영역과 주파수 영역에서의 시스템을 분석할 수 있는 능력을 기른다.</string>
    <string name="선형대수학_info">선형대수학은 우리에게 지식을 체계화시킬 수 있는 논리를 제공해준다. 그러나 이러한 논리적 사고 능력은 단순히 암기해서는 안되고 한단계 한단계를 이해해 나가는 훈련과정 중에 얻어지게 된다. 이러한 논리적 사고 능력의 배양과 함께 선형대수의 기본 개념들을 탐구하고 적용할 수 있는 능력의 개발이 본 교과목이 목표하는 바이다. 본 과목에서는 이론만을 다루지 않고 그래프 이론, 암호 이론, 프로세스, 컴퓨터 그래픽, 피보나치 수열, 데이터의 곡선적합 등 선형대수의 응용을 적절하게 다루었다.</string>
    <string name="기초정보통신실험_info">실험실습에 대한 기초지식과 경험이 전무한 공학도를 대상으로 납땜, 멀티테스터 사용법, 직렬회로, 병렬회로, 브리지회로, 공진회로, 여파기회로 등에 관한 실험과 오실로스코프 사용법을 익혀서 후수 교과목에 대한 바탕이 되도록 한다.</string>
    <string name="회로이론_info">전기전자 회로의 해석을 위해 필요한 기본적인 지식을 이해하고 실습을 통해 해석 능력을 향상시킨다. 전압, 전류, 전력의 기본적인 개념부터 시작하여 회로해석의 기본 원리인 중첩의 원리, Thevenin 등가회로, Norton 등가회로, delta-Y 변환 및 회로해석의 기본 지식인 branch, mesh analysis를 교류회로 해석에 응용할 수 있도록 학습한다.</string>
    <string name="디지털신호처리_info">기본적인 디지털 신호의 표현방법, 연산 및 선형?시불변?인과시스템의 정의 및 성질을 이해하고 이들 시스템의 입출력 관계와 시스템의 특성을 나타내는 수학적인 표현방법을 학습하며, 디지털신호처리의 중요한 해석도구인 Z 변환 및 스펙트럼 분석시 사용되는 이산푸리에 변환(DCT), 고속푸리에 변환(FFT)법을 취급하여 신호와 시스템을 시간영역과 주파수영역에서 해석하는 방법을 터득하며, 주파수응답(전달함수)특성을 이용한 FIR과 IIR 필터의 설계방법에 대해 학습한다.</string>
    <string name="전자기학_info">공학수학을 이수한 학생을 대상으로 전기자기학의 기본인 정전기학에 대해서 학습한다. 이를 위해서 전자기학에서 자주 이용되는 벡터해석을 학습한 후, 정전기장, 전기 분극, 가우스 법칙, 포아송 방정식, 라플라스 방정식, 경계치 문제 등을 학습한다. 정전기에 대해서 공부한 학생을 대상으로 정지해 있는 자기에 의한 정자기학, 시변 전기 자기학에 대해서 학습한다. 자속 밀도, 비오-사바르 법칙, 자기 다이폴, 자화, 투자율, 패러데이 법칙, 맥스웰 방정식, 파동 방정식, 정현파 필드, 각 매질 내에서의 평면파의 거동에 대해서 학습한다.</string>
    <string name="컴퓨터구조_info">공학수학을 이수한 학생을 대상으로 전기자기학의 기본인 정전기학에 대해서 학습한다. 이를 위해서 전자기학에서 자주 이용되는 벡터해석을 학습한 후, 정전기장, 전기 분극, 가우스 법칙, 포아송 방정식, 라플라스 방정식, 경계치 문제 등을 학습한다. 정전기에 대해서 공부한 학생을 대상으로 정지해 있는 자기에 의한 정자기학, 시변 전기 자기학에 대해서 학습한다. 자속 밀도, 비오-사바르 법칙, 자기 다이폴, 자화, 투자율, 패러데이 법칙, 맥스웰 방정식, 파동 방정식, 정현파 필드, 각 매질 내에서의 평면파의 거동에 대해서 학습한다.</string>
    <string name="객체지향프로그래밍_info">Structured Technique와 Object-Oriented Technique의 차이점과 Object의 개념에 대하여 공부하고, Object를 구현하기 위하여 Programming Language가 제공해야 할 기능 및 특징들에 관하여 살펴보며, Visual C++, C#과 같은 language를 이용하여 Object, Data Abstraction, Package, Class, Property Inheritance와 같은 개념들을 구현한다.</string>
    <string name="반도체공학_info">기본적인 반도체 물성의 기본적 이해를 위한 결정의 static 및 dynamic 특성, 전자 band 개념과 활용, Fermi Dirac 분포 등의 통계적 접근법을 이해하고, 도핑의 효과와 캐리어 농도의 변화 및 캐리어 전송, 그리고 pn 접합의 전기적 특성 등에 대한 기초지식과 함께 반도체 소자응용을 연계하여 다룬다.</string>
    <string name="확률및통계_info">집합이론, 확률공간, 독립사건, 조건부확률, 확률변수의 분포함수, 밀도함수, 가우시안 확률변수, 평균치, 분산, 특성함수, 확률변수의 합과 변환, 결합분포 및 결합밀도함수, 상관과 모멘트 등을 배우며, 확률적 실험 결과의 통계적인 분석을 위하여 통계분야에서는 표본방법 및 표본분포, 통계적 추정, 가설 및 검정, 회귀분석 및 상관관계, 분산분석 등을 다룬다. 퀴즈 풀이를 통한 이론적 이해와 함께, S/W를 이용하여 통계처리기술의 기초 능력을 배양한다.</string>
    <string name="자료구조_info">자료 구조를 표현할 수 있는 여러가지 구현 방법과 자료구조를 이해하고 조작할수 있는 알고리즘을 습득케한다.</string>
    <string name="정보이론_info">광의의 정보이론의 원리를 이해하고 협의의 정보이론에 대해 해석한다. 우선 정보원 부호화의 원리와 통신로 부호화의 수학적인 원리를 해석하고 효율적인 정보원 부호화기법 등을 살펴본다. 채널 모델링 및 채널 용량 그리고 샤논의 한계 등을 공부하고 각 단원 별로 과제물을 부여하며 원리에 대해 이해할 수 있는 능력을 배양한다.</string>
    <string name="컴퓨터그래픽스_info">2차원 Transformation, Clipping과 Windowing 등과 같은 컴퓨터 그래픽스의 기본적인 개념을 공부한 후 이들을 이용하여 그래픽스 패키지를 개발해 본다. 여러 가지 그래픽스 입력 장치와 기법을 다로고 Raster 그래픽스, 3차원 그래픽스 등에 대해 연구한다.</string>
    <string name="마이크로프로세서_info">컴퓨터의 pipeline, interrupt와 direct memory access (DMA), 컴퓨터 시스템의 메모리 sub system, MCU의 구조와 명령어 등에 대해서 학습한다.</string>
    <string name="데이터베이스_info">데이터베이스의 기본 개념에서부터 E/R모델과 객체지향데이터 모델 등을 포함하는 데이터베이스 설계, SQL2의 표준 데이터베이스 프로그래밍, SQL3의 한조건(Constraints), 트리거(triggers), 재귀(recursion)등의 고급 데이터베이스 프로그래밍을 학습한다.</string>
    <string name="채널코딩_info">우선 블록 부호화/복호화, 길쌈 부호화/비터비 복호화, 터보부호화/복호화 및 암호화, LDPC 부호화/복호화 등을 해석하고 효율적인 변조기법 등을 살펴본다. 각 단원 별로 과제물을 부여하며 원리에 대해 이해할 수 있는 능력을 배양한다.</string>
    <string name="JAVA프로그래밍_info">객체지향언어인 Java언어의 문법을 익히고, 해결하려는 문제를 객체로서 기술하여 프로그램화 하는 기술을익힌다. 단원별로 수시평가와 과제물을 10회 실시하여 실제적인 문제를 해결하는 능력을 기른다. 오픈된 자료로 주어진 문제를 해결하도록 하여 실제 산업체에서와 동일하게 오픈된 자료와 기 작성된 프로그램을 활용하여 실무에 활용하는 능력을 배양한다.</string>
    <string name="Three_Dimensional그래픽스프로그래밍_info">3차원 컴퓨터 영상의 특성과 3D소프트웨어를 사용을 포함한 원리와 테크닉을 이용하여 모델링, 텍스쳐 맵핑, 카메라, 조명, 모션과 타이밍의 사영을 포함한 원리와 테크닉을 이용하여 애니메이션 작품을 제작한다.</string>
    <string name="영상처리_info">디지털 영상(신호)처리의 기초가 되는 여러 가지 영상처리기법에 관한 학습을 위해 우선, 윤곽추출을 위한 1차 미분(gradient)과 Sobel(Robert) 연산자, 2차 미분(Laplacin)과 라플라시안 연산자, 템플레이트 정합(Template matching)과 Prewitt 방법에 사용하는 마스크(Mask), 평활화와 미디언 필터, 확장-수축에 의한 잡음제거, 콘트라스트의 강조, 기하학적인 변환에 대해 학습하며, 다음으로 영상개선(강조), 영상복원, 영상해석, 영상압축 방법에 관한 학습을 통해 영상처리 시스템을 해석하고 설계할 수 있는 기초능력을 기른다.</string>
    <string name="데이터통신_info">데이터 통신에 대한 기본적인 내용, 특히 Data Link Layer, Network Layer에 대한 이해와 최신 무선 통신에서의 이들 계층의 구조를 이해함으로써 최신 프로토콜은 대한 이해 능력을 기르고 이를 구현할 수 있는 바탕을 마련한다.</string>
    <string name="전자회로1_info">전자회로는 전자, 통신, 컴퓨터, 제어 시스템 등에 사용되는 회로를 총칭하는 것으로서 본 과정에서는500MHz 이하의 아날로그 및 디지털 시스템을 구성하는 회로를 블록별로 이해하고 해석하여 설계능력을 갖도록 하는 과정이다. 본 과목을 마치면 시스템 공학의 기초가 되어 각종 통신, 및 전자 시스템을 설계할 수 있는 능력을 갖추므로 이동통신시스템, 무선통신시스템, 제어시스템 등을 이수할 수 있다.</string>
    <string name="무선응용공학_info">초고주파 회로 및 시스템을 이해하고 분석할 수 있는 능력을 배양하기 위하여 기본적인 원리에 충실하게 강의하며 질의응답을 통해 문제해결 능력을 향상시킨다.</string>
    <string name="통신방식론_info">통신 방식의 기본적인 개념을 배우고 아날로그 변조 기법의 종류와 장단점을 습득한다. 아날로그 통신시스템의 성능을 유도하고 해석한다.</string>
    <string name="PCB아트워크설계_info">4 차 산업혁명을 선도하는 IoT기술의 핵심인 임베디드 시스템의 핵심 구성 요소인 전기회로, 전자회로 및 논리회로의 설계하고 분석할 수 있는 MultiSim 프로그램에 대하여 학습한다. 또한 분석된 회로를 상용 제품화하기 위하여 인쇄회로기판(Printed Circuit Board, PCB)을 제작하기 위한 아트워크(Artwork) 기술에 사용되는 UltiBoard 프로그램에 대하여 학습한다. 학습자는  전기전자회로, 논리회로 및 초고주파회로에 대한 지식 습득과 하드웨어설계 프로그래밍실습을 통해 관련 산업체와 연구기관에서 요구하는 PCB아트워크 설계에 대한 전문성을 함양할 수 있다.</string>
    <string name="운영체제_info">운영체제의 기능들 중 특히 프로세스 관리 기능과 메모리 관리 기능 등을 중점적으로 다루며 Unix, Linux, Windows XP 등 실제 운영체제들에서의 적용 예를 살펴본다. 또한, 각 주제별로 예제 프로그램을 직접 작성하거나 작성된 예제 프로그램을 운영하여 봄으로써 실제 시스템에서의 각 주제의 실제적인 동작을 이해함으로써 운영체제의 전체 시스템에 대한 이해의 폭을 넓힌다.</string>
    <string name="디지털통신실험_info">카운터를 이용한 BCD 부호출력회로, 신호발생기, 주파수 승산기, 펄스 진폭 변조기, 펄스 폭 변조기, 디지털 부호 NRZ↔RZ 변환, 디지털 부호 NRZ↔Manchester 변환, 디지털 변복조기 ASK/FSK/PSK, 시분할 다중화 및 역다중화, VCO 실험 등을 수행한다.</string>
    <string name="디지털통신이론_info">주파수 영역 신호 해석 기법을 배우고 유도하는 능력을 익히고 시간과 주파수 영역에서의 신호의 왜곡 현상에 대해 이해한다. 아날로그 신호의 디지털화 기술 방법과 해석방법을 익히고 디지털 광대역 변복조 방식의 종류와 각 방법의 이론적 해석 방법을 익힌다.</string>
    <string name="안테나공학_info">전자기학과 전자장에 대한 전반적인 공부를 한 학생을 대상으로 맥스엘 방정식에 기초하여 전자기파 현상, 안테나의 정의, 안테나 성능 파라메타(안테나 패턴, 입력 임피던스, 방향성, 복사 효율, 이득, 편파 등), 안테나의 종류(다이폴 안테나, 루프 안테나, 헬리컬 안테나, 슬롯 안테나 패치 안테나 등)에 대해서 학습한다.</string>
    <string name="컴퓨터비전프로그래밍_info">본 교과목은 정지영상 및 동영상에 대한 신호처리 기술을 바탕으로 화면 내에 존재하는 물체의 추출, 물체의 인식 등을 위한 오픈 소스 프로그래밍 기법에 대해 학습한다. 기초적인 영상처리 기술과 더불어 컴퓨터비전 관련 프로그래밍 기술을 배양하여, 정지영상 및 동영상에 대한 다양한 실무 응용 기술을 익힌다.</string>
    <string name="전자회로2_info">전자회로 이론수업을 통하여 익힌 내용을 실습하는 과목으로 실제 사용되는 증폭기, OP Amp, Tuned AMP, Mixer등에 대한 회로를 설계하고 측정하는 실험을 하되 소프트웨어를 이용하여 개념을 익히고 설계할 수 있는 능력을 기르도록 실습한다.</string>
</resources>